@@ -262,18 +262,6 @@ static Cmd basicCmds[] = {
     {"ns_atstartup", NULL, NsTclAtStartupObjCmd},
     {"ns_base64decode", NULL, NsTclHTUUDecodeObjCmd},
     {"ns_base64encode", NULL, NsTclHTUUEncodeObjCmd},
-    {"ns_cache_append", NULL, NsTclCacheAppendObjCmd},
-    {"ns_cache_create", NULL, NsTclCacheCreateObjCmd},
-    {"ns_cache_eval", NULL, NsTclCacheEvalObjCmd},
-    {"ns_cache_get", NULL, NsTclCacheGetObjCmd},
-    {"ns_cache_set", NULL, NsTclCacheSetObjCmd},
-    {"ns_cache_flush", NULL, NsTclCacheFlushObjCmd},
-    {"ns_cache_incr", NULL, NsTclCacheIncrObjCmd},
-    {"ns_cache_exists", NULL, NsTclCacheExistsObjCmd},
-    {"ns_cache_keys", NULL, NsTclCacheKeysObjCmd},
-    {"ns_cache_lappend", NULL, NsTclCacheLappendObjCmd},
-    {"ns_cache_names", NULL, NsTclCacheNamesObjCmd},
-    {"ns_cache_stats", NULL, NsTclCacheStatsObjCmd},
     {"ns_cancel", NULL, NsTclCancelObjCmd},
     {"ns_charsets", NsTclCharsetsCmd, NULL},
     {"ns_cleanup", NULL, NsTclDummyObjCmd},
@@ -395,6 +383,18 @@ static Cmd servCmds[] = {
     {"ns_adp_tell", NULL, NsTclAdpTellObjCmd},
     {"ns_adp_trunc", NULL, NsTclAdpTruncObjCmd},
     {"ns_atclose", NULL, NsTclAtCloseObjCmd},
+    {"ns_cache_append", NULL, NsTclCacheAppendObjCmd},
+    {"ns_cache_create", NULL, NsTclCacheCreateObjCmd},
+    {"ns_cache_eval", NULL, NsTclCacheEvalObjCmd},
+    {"ns_cache_get", NULL, NsTclCacheGetObjCmd},
+    {"ns_cache_set", NULL, NsTclCacheSetObjCmd},
+    {"ns_cache_flush", NULL, NsTclCacheFlushObjCmd},
+    {"ns_cache_incr", NULL, NsTclCacheIncrObjCmd},
+    {"ns_cache_exists", NULL, NsTclCacheExistsObjCmd},
+    {"ns_cache_keys", NULL, NsTclCacheKeysObjCmd},
+    {"ns_cache_lappend", NULL, NsTclCacheLappendObjCmd},
+    {"ns_cache_names", NULL, NsTclCacheNamesObjCmd},
+    {"ns_cache_stats", NULL, NsTclCacheStatsObjCmd},
     {"ns_chan", NULL, NsTclChanObjCmd},
     {"ns_checkurl", NULL, NsTclRequestAuthorizeObjCmd},
     {"ns_cond", NULL, NsTclCondObjCmd},
